[package]
name = "chmopass"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "~4.10.2"
config = "~0.15.11"
dotenv = "~0.15.0"
env_logger = "~0.11.7"
futures-util = "~0.3.31"
jsonwebtoken = "~9.3.1"
log = "~0.4.26"
reqwest = { version = "~0.12.12", features = ["json", "rustls-tls"], default-features = false }
serde = "~1.0.219"
